# django-eb-sqs

./: development.txt  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
eb_sqs/: apps.py  decorators.py  settings.py  test_settings.py
eb_sqs/auto_tasks/: exceptions.py  service.py
eb_sqs/aws/: sqs_queue_client.py
eb_sqs/management/commands/: healthcheck.py  process_queue.py
eb_sqs/tests/auto_tasks/: tests_auto_tasks.py
eb_sqs/tests/aws/: tests_aws_queue_client.py
eb_sqs/tests/worker/: tests_worker.py  tests_worker_task.py
eb_sqs/worker/: commons.py  queue_client.py  service.py  sqs_worker_factory.py  worker.py  worker_exceptions.py  worker_factory.py  worker_task.py
